--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ source: source
 destination: build
 
 assets:
-  cachebust: soft
+cachebust: soft
 
 # Site settings
-title: Proteus
-description: Prototyping starter kit for Jekyll
-
-# Name of project on Github
-baseurl: /proteus-jekyll
+title: Huboard Enterprise
+description: Documentation Portal for Huboard Enterprise
 
 # Build settings
 markdown: kramdown
+
+# Include Pages Directory
+include: [pages, images]
