Implements search for hb-enterprise-docs using slashdotdash/jekyll-lunr-js-search

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ gems:
   - neat
   - jekyll-html-pipeline
   - extended-markdown-filter
+  - jekyll-lunr-js-search
 
 # Structure configuration
 source: source
